# neatnet

./: .gitignore  .pre-commit-config.yaml  CITATION.CFF  CONTRIBUTING.md  README.md  api.html  environment.yml  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  references.html  search.html  searchindex.js  simple_preprocessing.html
.github/: dependabot.yml
.github/workflows/: build_docs.yml  mypy.yml  release_neatnet_rs.yml  release_to_pypi.yml  testing.yml  testing_neatnet_rs.yml
_modules/: index.html
_modules/neatnet/: artifacts.html  gaps.html  nodes.html  simplify.html
_sources/: api.rst  simple_preprocessing.ipynb
_static/: documentation_options.js  references.bib
ci/: py311_latest.yaml  py311_oldest.yaml  py312_latest.yaml  py313_dev.yaml  py313_latest.yaml  py314_dev.yaml  py314_latest.yaml
data/: README.md  check_fua_known_vs_observed_diffs.ipynb  generate_simplified.py
data/aleppo_1133/: simplified.parquet
data/apalachicola/: simplified_exclusion_mask.parquet  simplified_standard.parquet
data/auckland_869/: simplified.parquet
data/bucaramanga_4617/: simplified.parquet
data/douala_809/: simplified.parquet
data/liege_1656/: simplified.parquet
data/slc_4881/: simplified.parquet
data/wuhan_8989/: simplified.parquet
docs/source/: api.rst  conf.py  index.md  intro.ipynb  simple_preprocessing.ipynb
docs/source/_static/: references.bib
neatnet/: __init__.py  artifacts.py  continuity.py  gaps.py  geometry.py  nodes.py  simplify.py  utils.py
neatnet-rs/: Cargo.toml  PLAN.md  PROGRESS.md
neatnet-rs/crates/neatnet-core/: Cargo.toml
neatnet-rs/crates/neatnet-core/src/: artifacts.rs  continuity.rs  gaps.rs  geometry.rs  lib.rs  nodes.rs  ops.rs  simplify.rs  spatial.rs  types.rs
neatnet-rs/crates/neatnet-core/tests/: integration.rs
neatnet-rs/crates/neatnet-core/tests/data/: apalachicola_expected.wkt  apalachicola_input.wkt
neatnet-rs/crates/neatnet-py/: Cargo.toml  pyproject.toml
neatnet-rs/crates/neatnet-py/neatnet_rs/: __init__.py
neatnet-rs/crates/neatnet-py/src/: lib.rs
neatnet-rs/crates/neatnet-py/tests/: test_roundtrip.py
neatnet/tests/: conftest.py  test_artifacts.py  test_continuity.py  test_gaps.py  test_geometry.py  test_nodes.py  test_simplify.py  test_utils.py
neatnet/tests/data/: apalachicola_simplified_exclusion_mask.parquet  apalachicola_simplified_standard.parquet
