[package]
name = "neatnet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Street network simplification – pure Rust core"

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
wkt = { workspace = true }
delaunator = { workspace = true }
petgraph = { workspace = true }
kodama = { workspace = true }
rstar = { workspace = true }
sprs = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true }
hashbrown = { workspace = true }

# Optional deps for CLI binary
parquet = { workspace = true, optional = true }

[features]
cli = ["dep:parquet"]

[[bin]]
name = "profile_neatify"
required-features = ["cli"]

[dev-dependencies]
approx = "0.5"
