[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "neatnet-rs"
version = "0.1.0"
description = "Street network simplification (Rust-accelerated)"
requires-python = ">=3.11"
license = "BSD-3-Clause"
dependencies = [
    "geopandas>=1.0",
    "pyarrow>=17.0",
    "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "neatnet",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "neatnet_rs._neatnet_rs"
manifest-path = "Cargo.toml"
